css files created

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             <a href=""></a>
             <img src="./images/icon.png" alt="logo">
         </article>
+        <section>
+            <h2>Top projects</h2>
+            <ul>
+                <li>
+                    <h3></h3>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Also find us on</h2>
+
+        </section>
     </main>
     <footer></footer>
 </body>
