images + top project cards

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href=""><img src="./images/logo.png" alt=""></a>
+                    <a href=""><img src="./images/logos/quackStudios.png" alt=""></a>
                 </li>
                 <li>
                     <a href="">Home</a>
                 </li>
                 <li>
-                    <a href="">About us</a>
+                    <a href="./about-us/">About us</a>
                 </li>
                 <li>
-                    <a href="">Projects</a>
+                    <a href="./projects/">Projects</a>
                 </li>
             </ul>
         </nav>
@@ -44,12 +44,24 @@
             <ul>
                 <li>
                     <h3>Mission Mothership</h3>
+                    <img src="" alt="">
+                    <span>
+                        <a href="">Learn more</a>
+                    </span>
                 </li>
                 <li>
                     <h3>More And More Armor</h3>
+                    <img src="./images/logos/more_armor.png" alt="">
+                    <span>
+                        <a href="">Learn more</a>
+                    </span>
                 </li>
                 <li>
                     <h3>Crafter God</h3>
+                    <img src="./images/logos/craftergod.png" alt="">
+                    <span>
+                        <a href="">Learn more</a>
+                    </span>
                 </li>
             </ul>
         </section>
