--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/helper.css">
     <title>QuackStudios</title>
 </head>
 <body>
@@ -41,27 +42,24 @@
         </article>
         <section>
             <h2>Top projects</h2>
-            <ul>
+            <ul class="cards">
                 <li>
                     <h3>Mission Mothership</h3>
-                    <img src="" alt="">
-                    <span>
-                        <a href="">Learn more</a>
-                    </span>
+                    <img src="./images/image.png" alt="">
+                    <a href="./projects/mission-mothership" class="button">Learn more</a>
+                    <a href="./projects/mission-mothership" class="overlay-link">Learn more</a>
                 </li>
                 <li>
                     <h3>More And More Armor</h3>
                     <img src="./images/logos/more_armor.png" alt="">
-                    <span>
-                        <a href="">Learn more</a>
-                    </span>
+                    <a href="./projects/minecraft/more-and-more-armor" class="button">Learn more</a>
+                    <a href="./projects/minecraft/more-and-more-armor" class="overlay-link">Learn more</a>
                 </li>
                 <li>
                     <h3>Crafter God</h3>
                     <img src="./images/logos/craftergod.png" alt="">
-                    <span>
-                        <a href="">Learn more</a>
-                    </span>
+                    <a href="./projects/minecraft/crafter-god" class="button">Learn more</a>
+                    <a href="./projects/minecraft/crafter-god" class="overlay-link">Learn more</a>
                 </li>
             </ul>
         </section>
