--- a/index.html
+++ b/index.html
@@ -65,13 +65,34 @@
         </section>
         <section>
             <h2>Also find us on</h2>
-            <ul>
-                <li>Discord</li>
+            <ul class="social">
+                <li>
+                    <h3>Discord</h3>
+                    <p>QuackStudios</p>
+                    <a href="https://discord.gg/shN53SqB5P" class="overlay-link">Go to discord</a>
+                </li>
+                <li>
+                    <h3>Twitter</h3>
+                    <p>@QuackRoyal</p>
+                    <a href="https://x.com/QuackRoyal" class="overlay-link">Go to Twitter</a>
+                </li>
+                <li>
+                    <h3>Modrinth</h3>
+                    <p>RoyalQuack</p>
+                    <a href="https://modrinth.com/user/RoyalQuack" target="_blank" class="overlay-link">Go to Modrinth</a>
+                </li>
+                <li>
+                    <h3>Curseforge</h3>
+                    <p>RoyalQuackOG</p>
+                    <a href="https://www.curseforge.com/members/royalquackog/projects" class="overlay-link">Go to Curseforge</a>
+                </li>
             </ul>
         </section>
     </main>
     <footer>
-
+        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt">KBrandt</a></p>
+        <p><a href="https://github.com/RoyalQuack/QuackStudios-website">Github</a></p>
+        <p><a href="./privacy">Privacy policy</a></p>
     </footer>
 </body>
 </html>
