--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 <li>
                     <h3>Discord</h3>
                     <p>QuackStudios</p>
-                    <a href="https://discord.gg/shN53SqB5P" class="overlay-link">Go to discord</a>
+                    <a href="https://discord.gg/shN53SqB5P" target="_blank" class="overlay-link">Go to discord</a>
                 </li>
                 <li>
                     <h3>Twitter</h3>
                     <p>@QuackRoyal</p>
-                    <a href="https://x.com/QuackRoyal" class="overlay-link">Go to Twitter</a>
+                    <a href="https://x.com/QuackRoyal" target="_blank" class="overlay-link">Go to Twitter</a>
                 </li>
                 <li>
                     <h3>Modrinth</h3>
@@ -84,15 +84,17 @@
                 <li>
                     <h3>Curseforge</h3>
                     <p>RoyalQuackOG</p>
-                    <a href="https://www.curseforge.com/members/royalquackog/projects" class="overlay-link">Go to Curseforge</a>
+                    <a href="https://www.curseforge.com/members/royalquackog/projects" target="_blank" class="overlay-link">Go to Curseforge</a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt">KBrandt</a></p>
-        <p><a href="https://github.com/RoyalQuack/QuackStudios-website">Github</a></p>
-        <p><a href="./privacy">Privacy policy</a></p>
+        <div class="container">
+            <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
+            <p><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">Github</a></p>
+            <p><a href="./privacy">Privacy policy</a></p>
+        </div>
     </footer>
 </body>
 </html>
