--- a/privacy/index.html
+++ b/privacy/index.html
@@ -59,8 +59,8 @@ If you are concerned or have any questions please contact us at support@quackstu
         </section>
     </main>
     <footer>
-        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt">KBrandt</a></p>
-        <p><a href="https://github.com/RoyalQuack/QuackStudios-website">Github</a></p>
+        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
+        <p><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">Github</a></p>
         <p><a href="">Privacy policy</a></p>
     </footer>
 </body>
