minor fixes + start of about-us

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/helper.css">
     <title>QuackStudios</title>
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
+    <meta name="title" content="QuackStudios">
+    <meta name="description" content="The homepage of QuackStudios">
+    <meta name="keywords" content="QuackStudios">
+    <meta name="author" content="KBrandt">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QFDW7LB80B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QFDW7LB80B');
+</script>
 <body>
     <header>
         <nav>
