--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/helper.css">
-    <title>QuackStudios</title>
+    <title>Privacy policy | QuackStudios</title>
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
+    <meta name="title" content="QuackStudios Privacy policy">
+    <meta name="description" content="The Privacy policy of QuackStudios">
+    <meta name="keywords" content="QuackStudios">
+    <meta name="author" content="KBrandt">
 </head>
 <body>
     <header>
@@ -33,8 +38,8 @@
     </header>
     <main  class="container">
         <h1>Privacy policy</h1>
-        <p class="eddited">Last Updated: 17/03/2025</p>
-        <p>
+        <p class="date">Last Updated: 17/03/2025</p>
+        <p class="bulk">
             QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, quacker.link ("Website" or "Site").
 
 We reserve the right to update this privacy policy at anytime without prior notice.
@@ -45,7 +50,7 @@ If you are concerned or have any questions please contact us at support@quackstu
         </p>
         <section>
             <h2>Information We Collect</h2>
-            <p>
+            <p class="bulk">
                 When interacting with the site we may collect your IP address and/or MAC address
                 When on the site we collect page views, your location, outbound clicks, site search, video engagement, file downloads and form interactions.    
                 We also use services provided to us from google, netlify and cloudflare.
@@ -53,7 +58,7 @@ If you are concerned or have any questions please contact us at support@quackstu
         </section>
         <section>
             <h2>Safeguarding</h2>
-            <p>
+            <p class="bulk">
                 Our site is being served to you through HTTPS and Cloudflare protection
             </p>
         </section>
