about-us changes

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/helper.css">
     <title>Privacy policy | QuackStudios</title>
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
-    <meta name="title" content="QuackStudios Privacy policy">
-    <meta name="description" content="The Privacy policy of QuackStudios">
+    <meta name="title" content="QuackStudios about us">
+    <meta name="description" content="The about us page of QuackStudios">
     <meta name="keywords" content="QuackStudios">
     <meta name="author" content="KBrandt">
 </head>
@@ -37,31 +37,8 @@
         </nav>
     </header>
     <main  class="container">
-        <h1>Privacy policy</h1>
-        <p class="eddited">Last Updated: 17/03/2025</p>
-        <p>
-            QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, quacker.link ("Website" or "Site").
-
-We reserve the right to update this privacy policy at anytime without prior notice.
-
-When using our site you accept our privacy policy no matter what.
-
-If you are concerned or have any questions please contact us at support@quackstudios.dev
-        </p>
-        <section>
-            <h2>Information We Collect</h2>
-            <p>
-                When interacting with the site we may collect your IP address and/or MAC address
-                When on the site we collect page views, your location, outbound clicks, site search, video engagement, file downloads and form interactions.    
-                We also use services provided to us from google, netlify and cloudflare.
-            </p>
-        </section>
-        <section>
-            <h2>Safeguarding</h2>
-            <p>
-                Our site is being served to you through HTTPS and Cloudflare protection
-            </p>
-        </section>
+        <h1>About us</h1>
+        
     </main>
     <footer>
         <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
