implementation KBrandt design system

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="./css/generic.css">
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/components.css">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/helper.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>QuackStudios</title>
     <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
     <meta name="title" content="QuackStudios">
@@ -28,11 +24,9 @@
 </script>
 <body>
     <header>
-        <nav>
+        <nav class="navigation">
+            <p><a href=""><img src="./images/logos/quackStudios.png" alt=""></a></p>
             <ul>
-                <li>
-                    <a href=""><img src="./images/logos/quackStudios.png" alt=""></a>
-                </li>
                 <li>
                     <a href="">Home</a>
                 </li>
