--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="../css/generic.css">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/helper.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Privacy policy | QuackStudios</title>
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <meta name="title" content="QuackStudios about us">
@@ -19,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navigation">
             <ul>
                 <li>
                     <a href="../"><img src="../images/logos/quackStudios.png" alt=""></a>
