--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </article>
         <section>
             <h2>Top projects</h2>
-            <ul class="cards">
+            <ul class="card">
                 <li>
                     <h3>Mission Mothership</h3>
                     <img src="./images/image.png" alt="">
@@ -65,22 +65,22 @@
         <section>
             <h2>Also find us on</h2>
             <ul class="social">
-                <li>
+                <li class="discord">
                     <h3>Discord</h3>
                     <p>QuackStudios</p>
                     <a href="https://discord.gg/shN53SqB5P" target="_blank" class="overlay-link">Go to discord</a>
                 </li>
-                <li>
-                    <h3>Twitter</h3>
+                <li class="x">
+                    <h3>X</h3>
                     <p>@QuackRoyal</p>
                     <a href="https://x.com/QuackRoyal" target="_blank" class="overlay-link">Go to Twitter</a>
                 </li>
-                <li>
+                <li class="modrinth">
                     <h3>Modrinth</h3>
                     <p>RoyalQuack</p>
                     <a href="https://modrinth.com/user/RoyalQuack" target="_blank" class="overlay-link">Go to Modrinth</a>
                 </li>
-                <li>
+                <li class="curseforge">
                     <h3>Curseforge</h3>
                     <p>RoyalQuackOG</p>
                     <a href="https://www.curseforge.com/members/royalquackog/projects" target="_blank" class="overlay-link">Go to Curseforge</a>
@@ -88,12 +88,10 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <div class="container">
-            <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
-            <p><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">Github</a></p>
-            <p><a href="./privacy">Privacy policy</a></p>
-        </div>
+    <footer class="footer">
+        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
+        <p><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">Github</a></p>
+        <p><a href="./privacy">Privacy policy</a></p>
     </footer>
 </body>
 </html>
