privacy and about us

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="../css/generic.css">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/helper.css">
-    <title>Privacy policy | QuackStudios</title>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>QuackStudios</title>
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
-    <meta name="title" content="QuackStudios Privacy policy">
-    <meta name="description" content="The Privacy policy of QuackStudios">
+    <meta name="title" content="QuackStudios">
+    <meta name="description" content="The homepage of QuackStudios">
     <meta name="keywords" content="QuackStudios">
     <meta name="author" content="KBrandt">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navigation">
+            <p><a href=""><img src="../images/logos/quackStudios.png" alt="QuackStudios"></a></p>
             <ul>
-                <li>
-                    <a href="../"><img src="../images/logos/quackStudios.png" alt=""></a>
-                </li>
                 <li>
                     <a href="../">Home</a>
                 </li>
@@ -36,37 +30,33 @@
             </ul>
         </nav>
     </header>
-    <main  class="container">
+    <main  class="container container-detail">
         <h1>Privacy policy</h1>
-        <p class="date">Last Updated: 17/03/2025</p>
-        <p class="bulk">
-            QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, quacker.link ("Website" or "Site").
-
-We reserve the right to update this privacy policy at anytime without prior notice.
-
-When using our site you accept our privacy policy no matter what.
-
-If you are concerned or have any questions please contact us at support@quackstudios.dev
-        </p>
+        <p class="bold">Last Updated: 25/03/2025</p>
+        <p>QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, quacker.link ("Website" or "Site").</p>
+        <p>We reserve the right to update this privacy policy at anytime without prior notice.</p>
+        <p>If you are concerned or have any questions please contact us at support@quackstudios.dev.</p>
         <section>
             <h2>Information We Collect</h2>
-            <p class="bulk">
-                When interacting with the site we may collect your IP address and/or MAC address
-                When on the site we collect page views, your location, outbound clicks, site search, video engagement, file downloads and form interactions.    
-                We also use services provided to us from google, netlify and cloudflare.
-            </p>
+            <p>When interacting with the site we may collect your IP address and/or MAC address .</p>
+            <p>When on the site we collect page views, your location, outbound clicks, site search, video engagement, file downloads and form interactions.</p>
+            <p>We also use services provided to us from google, netlify and cloudflare.</p>
         </section>
         <section>
             <h2>Safeguarding</h2>
-            <p class="bulk">
-                Our site is being served to you through HTTPS and Cloudflare protection
-            </p>
+            <p>Our site is being served to you through HTTPS and Cloudflare protection.</p>
+            <p>No data collected is specificly linked to users and is used for general analytics.</p>
         </section>
     </main>
-    <footer>
-        <p>The QuackStudios site | Developed and Designed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
-        <p><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">Github</a></p>
-        <p><a href="">Privacy policy</a></p>
+    <footer class="footer">
+        <p>© 2025 QuackStudios. All rights reserved.</p>
+        <p>Minecraft is a registered trademark of Mojang AB. QuackStudios is not affiliated with Mojang AB.</p>
+        <p>Designed and developed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
+        <ul class="links">
+            <li><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">View on Github</a></li>
+            <li><a href="https://discord.gg/shN53SqB5P">Join Our Discord</a></li>
+            <li><a href="../privacy/">Privacy Policy</a></li>
+        </ul>
     </footer>
 </body>
 </html>
