small footer changes

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -33,7 +33,7 @@
     <main  class="container container-detail">
         <h1>Privacy policy</h1>
         <p class="bold">Last Updated: 25/03/2025</p>
-        <p>QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, quacker.link ("Website" or "Site").</p>
+        <p>QuackStudios ("we," "us," or "our") is committed to protecting the privacy of our users ("you" or "your"). This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our website, <a href="https://quackstudios.dev/">quackstudios.dev</a> ("Website" or "Site").</p>
         <p>We reserve the right to update this privacy policy at anytime without prior notice.</p>
         <p>If you are concerned or have any questions please contact us at support@quackstudios.dev.</p>
         <section>
