cards for logo + added pages for all projects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p><a href=""><img src="./images/logos/quackStudios.png" alt="QuackStudios"></a></p>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="" class="curent">Home</a>
                 </li>
                 <li>
                     <a href="./about-us/">About us</a>
@@ -39,7 +39,7 @@
     <main class="container">
         <section>
             <h2>Top projects</h2>
-            <ul class="card">
+            <ul class="card card-logo">
                 <li>
                     <h3>More And More Armor</h3>
                     <img src="./images/logos/more_armor.png" alt="">
