--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,12 +6,12 @@
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>QuackStudios</title>
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <meta name="title" content="QuackStudios">
     <meta name="description" content="The homepage of QuackStudios">
     <meta name="keywords" content="QuackStudios">
     <meta name="author" content="KBrandt">
+    <title>Privacy | QuackStudios</title>
 </head>
 <body>
     <header>
