more and more armor

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,9 +34,20 @@
         <h1>Our Projects</h1>
         <section>
             <h2>Minecraft mods</h2>
-            <ul>
+            <ul class="card card-logo">
                 <li>
-                    
+                    <h3>More And More Armor</h3>
+                    <img src=".././images/logos/more_armor.png" alt="">
+                    <p>Expand your armor options with this comprehensive armor expansion mod. Discover over a dozen of new armor pieces and sets with unique properties and abilities.</p>
+                    <a href="./minecraft/moreAndMoreArmor" class="button">Learn more</a>
+                    <a href="./minecraft/moreAndMoreArmor" class="overlay-link">Learn more</a>
+                </li>
+                <li>
+                    <h3>Crafter God</h3>
+                    <img src=".././images/logos/craftergod.png" alt="">
+                    <p>Become a master crafter with this comprehensive crafting overhaul mod that introduces almost 50 uncraftable items, now craftable, while being balanced!</p>
+                    <a href="./projects/minecraft/crafterGod" class="button">Learn more</a>
+                    <a href="./projects/minecraft/crafterGod" class="overlay-link">Learn more</a>
                 </li>
             </ul>
         </section>
@@ -45,6 +56,15 @@
         </section>
         <section>
             <h2>Extras</h2>
+            <ul class="card card-logo">
+                <li>
+                    <h3>MineMonitor</h3>
+                    <img src=".././images/image.png" alt="">
+                    <p>A poweful discord bot with API hooks, that automatically sends community updates when mods or modpacks are updated. With support for modrinth.</p>
+                    <a href="./projects/mineMonitor" class="button">Learn more</a>
+                    <a href="./projects/mineMonitor" class="overlay-link">Learn more</a>
+                </li>
+            </ul>
         </section>
     </main>
     <footer class="footer">
