example pages projects

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
                     <h3>More And More Armor</h3>
                     <img src="./images/logos/more_armor.png" alt="">
                     <p>Expand your armor options with this comprehensive armor expansion mod. Discover over a dozen of new armor pieces and sets with unique properties and abilities.</p>
-                    <a href="./projects/minecraft/more-and-more-armor" class="button">Learn more</a>
-                    <a href="./projects/minecraft/more-and-more-armor" class="overlay-link">Learn more</a>
+                    <a href="./projects/minecraft/moreAndMoreArmor" class="button">Learn more</a>
+                    <a href="./projects/minecraft/moreAndMoreArmor" class="overlay-link">Learn more</a>
                 </li>
                 <li>
                     <h3>MineMonitor</h3>
                     <img src="./images/image.png" alt="">
                     <p>A poweful discord bot with API hooks, that automatically sends community updates when mods or modpacks are updated. With support for modrinth.</p>
-                    <a href="./projects/minemonitor" class="button">Learn more</a>
-                    <a href="./projects/minemonitor" class="overlay-link">Learn more</a>
+                    <a href="./projects/mineMonitor" class="button">Learn more</a>
+                    <a href="./projects/mineMonitor" class="overlay-link">Learn more</a>
                 </li>
                 <li>
                     <h3>Crafter God</h3>
                     <img src="./images/logos/craftergod.png" alt="">
                     <p>Become a master crafter with this comprehensive crafting overhaul mod that introduces almost 50 uncraftable items, now craftable, while being balanced!</p>
-                    <a href="./projects/minecraft/crafter-god" class="button">Learn more</a>
-                    <a href="./projects/minecraft/crafter-god" class="overlay-link">Learn more</a>
+                    <a href="./projects/minecraft/crafterGod" class="button">Learn more</a>
+                    <a href="./projects/minecraft/crafterGod" class="overlay-link">Learn more</a>
                 </li>
             </ul>
         </section>
@@ -108,7 +108,7 @@
         <p>Designed and developed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
         <ul class="links">
             <li><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">View on Github</a></li>
-            <li><a href="https://discord.gg/shN53SqB5P">Join Our Discord</a></li>
+            <li><a href="https://discord.gg/shN53SqB5P" target="_blank">Join Our Discord</a></li>
             <li><a href="./privacy/">Privacy Policy</a></li>
         </ul>
     </footer>
