--- a/projects/index.html
+++ b/projects/index.html
@@ -46,8 +46,8 @@
                     <h3>Crafter God</h3>
                     <img src=".././images/logos/craftergod.png" alt="">
                     <p>Become a master crafter with this comprehensive crafting overhaul mod that introduces almost 50 uncraftable items, now craftable, while being balanced!</p>
-                    <a href="./projects/minecraft/crafterGod" class="button">Learn more</a>
-                    <a href="./projects/minecraft/crafterGod" class="overlay-link">Learn more</a>
+                    <a href="./minecraft/crafterGod" class="button">Learn more</a>
+                    <a href="./minecraft/crafterGod" class="overlay-link">Learn more</a>
                 </li>
             </ul>
         </section>
@@ -73,8 +73,8 @@
         <p>Designed and developed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
         <ul class="links">
             <li><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">View on Github</a></li>
-            <li><a href="https://discord.gg/shN53SqB5P">Join Our Discord</a></li>
-            <li><a href="../privacy/">Privacy Policy</a></li>
+            <li><a href="https://discord.gg/shN53SqB5P" target="_blank">Join Our Discord</a></li>
+            <li><a href=".././privacy/">Privacy Policy</a></li>
         </ul>
     </footer>
 </body>
