--- a/projects/minecraft/moreAndMoreArmor/index.html
+++ b/projects/minecraft/moreAndMoreArmor/index.html
@@ -11,12 +11,12 @@
     <meta name="description" content="The homepage of QuackStudios">
     <meta name="keywords" content="QuackStudios">
     <meta name="author" content="KBrandt">
-    <title>More and more armor | Projects | QuackStudios</title>
+    <title>More and More Armor | Projects | QuackStudios</title>
 </head>
 <body>
     <header>
         <nav class="navigation">
-            <p><a href=""><img src="../images/logos/quackStudios.png" alt="QuackStudios"></a></p>
+            <p><a href="../../../"><img src="../../../images/logos/quackStudios.png" alt="QuackStudios"></a></p>
             <ul>
                 <li>
                     <a href="../../../">Home</a>
@@ -29,18 +29,25 @@
                 </li>
             </ul>
         </nav>
+        <!-- <nav class="navigation-solid navigation-breadcrumb"> -->
+        <nav class="navigation-breadcrumb">
+            <ol>
+                <li><a href="../../">Projects</a></li>
+                <li>More and More Armor</li>
+            </ol>
+        </nav>
     </header>
     <main class="container">
         <div class="intro">
             <div>
-                <h1>More and more armor</h1>
+                <h1>More and More Armor</h1>
                 <ul>
                     <li>Over a dozen new armor sets and pieces with unique appearances</li>
                     <li>Special armor abilities and set bonuses</li>
                     <li>New crafting materials for armor creation</li>
                     <li>Advancment system built-in</li>
                 </ul>
-                <a href="https://modrinth.com/mod/morearmor" class="button">Check it out on Modrinth</a>
+                <a href="https://modrinth.com/mod/morearmor" target="_blank" class="button">Check it out on Modrinth</a>
             </div>
             <img src="../../../images/logos/more_armor.png" alt="Duck" class="first">
         </div>
@@ -57,8 +64,8 @@
         <p>Designed and developed by <a href="https://github.com/KobeBrandt" target="_blank">KBrandt</a></p>
         <ul class="links">
             <li><a href="https://github.com/RoyalQuack/QuackStudios-website" target="_blank">View on Github</a></li>
-            <li><a href="https://discord.gg/shN53SqB5P">Join Our Discord</a></li>
-            <li><a href="../privacy/">Privacy Policy</a></li>
+            <li><a href="https://discord.gg/shN53SqB5P" target="_blank">Join Our Discord</a></li>
+            <li><a href="../../../privacy/">Privacy Policy</a></li>
         </ul>
     </footer>
 </body>
