added component for max with text

--- a/projects/minecraft/moreAndMoreArmor/index.html
+++ b/projects/minecraft/moreAndMoreArmor/index.html
@@ -53,7 +53,7 @@
         </div>
         <section>
             <h2>Elevate Your Armored Experience</h2>
-            <p>
+            <p class="text">
                 Step into the world of More and More Armor and witness the transformation of your Minecraft armor adventure. Break free from the constraints of vanilla armor sets and embrace the power to create, enhance, and explore like never before. Become the ultimate player and redefine your journey in Minecraft. Install More and More Armor today and start crafting your legacy.
             </p>
         </section>
