changed the font + added more project cards

--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <title>QuackStudios</title>
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
@@ -49,10 +49,33 @@
                     <a href="./minecraft/crafterGod" class="button">Learn more</a>
                     <a href="./minecraft/crafterGod" class="overlay-link">Learn more</a>
                 </li>
+                <li>
+                    <h3>Elemental Tools</h3>
+                    <img src=".././images/logos/lelemtanltools.png" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, dolorum consequatur dolor voluptatem ipsum ea quia ipsa veniam, error rerum enim porro voluptate quisquam eos iure quod natus tempora similique?</p>
+                    <a href="./minecraft/elementalTools/" class="button">Learn more</a>
+                    <a href="./minecraft/elementalTools/" class="overlay-link">Learn more</a>
+                </li>
+                <li>
+                    <h3>Artisan Tools</h3>
+                    <img src=".././images/logos/artisantools.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse excepturi molestiae sunt vitae vero hic maxime accusamus vel eum beatae amet, cumque eius porro. Reprehenderit, impedit voluptatem. Recusandae, in nulla!</p>
+                    <a href="./minecraft/artisanTools/" class="button">Learn more</a>
+                    <a href="./minecraft/artisanTools/" class="overlay-link">Learn more</a>
+                </li>
             </ul>
         </section>
         <section>
             <h2>Game Development</h2>
+            <ul class="card card-logo">
+                <li>
+                    <h3>Mission Mothership</h3>
+                    <img src=".././images/logos/missionMothershipLarge.png" alt="">
+                    <p>We're currently working on an exciting original game that combines our love for creative gameplay with unique mechanics. While still in development, we're passionate about creating a game that will provide players with a memorable experience.</p>
+                    <a href="./game/missionMothership" class="button">Learn more</a>
+                    <a href="./game/missionMothership" class="overlay-link">Learn more</a>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Extras</h2>
@@ -61,8 +84,8 @@
                     <h3>MineMonitor</h3>
                     <img src=".././images/image.png" alt="">
                     <p>A poweful discord bot with API hooks, that automatically sends community updates when mods or modpacks are updated. With support for modrinth.</p>
-                    <a href="./projects/mineMonitor" class="button">Learn more</a>
-                    <a href="./projects/mineMonitor" class="overlay-link">Learn more</a>
+                    <a href="./mineMonitor" class="button">Learn more</a>
+                    <a href="./mineMonitor" class="overlay-link">Learn more</a>
                 </li>
             </ul>
         </section>
