--- a/projects/minecraft/crafterGod/index.html
+++ b/projects/minecraft/crafterGod/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../../styles/style.css">
     <link rel="shortcut icon" href="../../../images/icon.png" type="image/x-icon">
     <meta name="title" content="QuackStudios">
